--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -10,20 +10,20 @@
 </h:head>
 <h:body>
   <h:outputStylesheet library="css" name="default.css" target="body" />
-	<div class="heading">
-	  <ui:insert name="heading">
-       #{msg.mainHeading}
-     </ui:insert>
-    </div>
-	<div class="menuAndContent">
-	 <div class="menu">
-	   <ui:insert name="menu">
-         <ui:include src="/views/main/menu.xhtml" />
-       </ui:insert>
-      </div>
+  <div>
+	  <div class="heading">
+		  <ui:insert name="heading">
+	       #{msg.mainHeading}
+	     </ui:insert>
+	  </div>		
+	  <div class="menu">
+		   <ui:insert name="menu">
+	         <ui:include src="/views/main/menu.xhtml" />
+	       </ui:insert>
+	  </div>
 	  <div class="content">
-	     <ui:insert name="content" />
-       </div>
-	</div>
+		     <ui:insert name="content" />
+	  </div>		
+  </div>
 </h:body>
 </html>
