--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,15 +1,16 @@
 body {
    margin: 0;
    padding: 0;
-   background-color:  lightGray;
+   background-color: #2b2b2b;
    font-family: Verdana, sans-serif;
    font-size: 0.9em;
 }
 
 .heading {
   padding: 10px;
-  background: #FFFFFF;
-  border: 1px solid blue;
+  background: #2b2b2b;
+  border: 0;
+  color: #ffffff;
   font-size: 1.4em;
   font-style: italic;
   font-family: Verdana;
@@ -17,33 +18,46 @@ body {
   height: 50px;
 }
 
-.menuAndContent {
-  width: 100%;
-  height: 100%;
+.menu ul li {
+	display: inline;
+}
+
+.menu ul li a {
+    float: left; 
+    text-decoration: none;
+    color: #d0fc00;
+    font-size: 10pt;
+    padding: 10.5px 11px;
+    background-color: #333; 
+}
+.menu ul li a:hover, .menu ul li .current {
+    color: #fff;
+    background-color:#0b75b2;
 }
 
 .menu {
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 20px;
-  border: thin solid blue;
-  position: absolute;
-  left: 10px;
-  height: 80%;
-  width: 200px;
-  background: #FFFFFF;
-  top: 90px;
+  border: 0;
+  width: 100%;
+  height: 15px;
+  background-color: #333;
+  top: 60px;
 }
 
 .content {
   padding-right: 20px;
-  padding-left: 20px;
+  padding-top: 20px;
+  padding-left: 70px;
   padding-bottom: 20px;
-  border: thin solid blue;
-  background: #FFFFFF;	
-  position:absolute;
-  left: 225px; 
-  right: 65px;
-  top: 90px;
-  height: 80%;
+  width: 100%;
+  border: 0;
+  color: #FFFFFF;
+  background: url("contentbg.jpg");
+}
+
+.table {
+	margin-right: 50px;
+	margin-left: 50px;
 }
